--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@ window.addEventListener("load", function() {
   overflow: hidden; /* Disable scrolling initially */
   scroll-behavior: smooth; /* Smooth scrolling once enabled */
 }
+#lock-screen input {
+  width: 80%;
+  max-width: 300px;
+  padding: 10px;
+  font-size: 16px;
+}
 
 #lockscreen {
   position: fixed;
