--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ window.addEventListener("load", function() {
 <div id="lockscreen">
   <div class="lock-card">
     <h2>🔐 Enter Your Secret Love Code</h2>
-    <input type="password" id="passInput" placeholder="💖 Type your secret..." autocomplete="off">
+    <input type="password" id="passInput" placeholder="💖 your secret..." autocomplete="off">
     <label class="show-pass">
       <input type="checkbox" id="showPass">
       <span>Show Passcode</span>
