--- a/index.html
+++ b/index.html
@@ -452,21 +452,34 @@ window.addEventListener("load", function() {
     height: 16px;
     accent-color: #e91e63;
   }
- #lockscreen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-height: 100dvh; /* full mobile viewport */
-  background: rgba(255, 255, 255, 0.95);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  overflow: hidden; /* block scroll inside */
-  touch-action: none; /* disable touch gestures */
+ /* Add this to your CSS for the lockscreen */
+/* LOCKSCREEN */
+#lockscreen {
+    position: fixed;       /* Stay on top */
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999;         /* Above everything */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    /* Animated gradient background */
+    background: linear-gradient(270deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
+    background-size: 800% 800%;
+    animation: gradientBG 15s ease infinite;
 }
+
+/* Gradient animation */
+@keyframes gradientBG {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+
 
 
  #lockscreen.fade-out {
