--- a/index.html
+++ b/index.html
@@ -453,32 +453,19 @@ window.addEventListener("load", function() {
     accent-color: #e91e63;
   }
  /* Add this to your CSS for the lockscreen */
-/* LOCKSCREEN */
 #lockscreen {
-    position: fixed;       /* Stay on top */
+    position: fixed;       /* Stay in place on scroll */
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 9999;         /* Above everything */
+    width: 100vw;          /* Full viewport width */
+    height: 100vh;         /* Full viewport height */
+    background-color: #fff; /* Or your lockscreen color */
+    z-index: 9999;          /* Make sure it’s above all content */
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-
-    /* Animated gradient background */
-    background: linear-gradient(270deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
-    background-size: 800% 800%;
-    animation: gradientBG 15s ease infinite;
 }
-
-/* Gradient animation */
-@keyframes gradientBG {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
-
 
 
 
