--- a/index.html
+++ b/index.html
@@ -452,21 +452,21 @@ window.addEventListener("load", function() {
     height: 16px;
     accent-color: #e91e63;
   }
- /* Add this to your CSS for the lockscreen */
-#lockscreen {
-    position: fixed;       /* Stay in place on scroll */
-    top: 0;
-    left: 0;
-    width: 100vw;          /* Full viewport width */
-    height: 100vh;         /* Full viewport height */
-    background-color: #fff; /* Or your lockscreen color */
-    z-index: 9999;          /* Make sure it’s above all content */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+ #lockscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100dvh; /* full mobile viewport */
+  background: rgba(255, 255, 255, 0.95);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  overflow: hidden; /* block scroll inside */
+  touch-action: none; /* disable touch gestures */
 }
-
 
 
  #lockscreen.fade-out {
