--- a/index.html
+++ b/index.html
@@ -763,6 +763,81 @@ body.lock-scroll {
   100% { transform: scale(1); }
 }
 
+/* BUCKET LIST */
+.bucket-grid {
+  list-style: none;
+  padding: 0;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 1rem;
+  max-width: 800px;
+}
+
+.bucket-grid li {
+  background: rgba(255, 255, 255, 0.1);
+  padding: 1rem;
+  border-radius: 1rem;
+  text-align: center;
+  font-size: 1.1rem;
+  font-weight: 500;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  animation: popIn 0.8s ease forwards;
+  opacity: 0;
+}
+
+.bucket-grid li:nth-child(odd) { animation-delay: 0.3s; }
+.bucket-grid li:nth-child(even) { animation-delay: 0.6s; }
+
+@keyframes popIn {
+  from { transform: scale(0.8); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+
+/* WISH WALL */
+.wish-container {
+  position: relative;
+  width: 100%;
+  height: 60vh;
+  background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+  overflow: hidden;
+  border-radius: 1rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
+
+.wish {
+  position: absolute;
+  padding: 0.6rem 1rem;
+  background: white;
+  border-radius: 12px;
+  font-size: 1rem;
+  font-weight: 500;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  animation: floatUp 12s linear infinite;
+}
+
+@keyframes floatUp {
+  0% { transform: translateY(100vh) rotate(5deg); opacity: 0; }
+  10% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { transform: translateY(-20vh) rotate(-5deg); opacity: 0; }
+}
+
+.envelope-message {
+  text-align: center;
+  font-family: 'Great Vibes', cursive;
+  font-size: 1.4rem;
+  color: #ff4d6d;
+  margin-bottom: 1rem;
+  animation: glow 2s infinite alternate;
+}
+
+@keyframes glow {
+  from { text-shadow: 0 0 8px rgba(255,77,109,0.6); }
+  to   { text-shadow: 0 0 15px rgba(255,77,109,0.9); }
+}
 
 </style>
 
@@ -1236,6 +1311,38 @@ body.lock-scroll {
 
 <br>
 <br>
+
+<!-- BUCKET LIST -->
+<section id="bucket-list" class="section">
+  <div class="section-title">
+    <div class="small">Chapter 6</div>
+    <h2>Our Future Bucket List 🌍</h2>
+  </div>
+<br>
+<br>
+  <ul class="bucket-grid">
+    <li>✈️ Travel to Paris together</li>
+    <li>🍕 Eat midnight pizza date</li>
+    <li>🌸 See cherry blossoms in Japan</li>
+    <li>🎶 Go to a concert we both love</li>
+    <li>🏔️ Trekking adventure</li>
+    <li>🎥 Make a short film together</li>
+    <li>🍨 Try 19 ice cream flavors in a day</li>
+  </ul>
+</section>
+ <br>
+ <br>
+
+ <!-- WISH WALL -->
+<section id="wish-wall" class="section">
+  <div class="section-title">
+    <div class="small">Chapter 7</div>
+    <h2>Birthday Wishes For You 🎉</h2>
+  </div>
+  <div class="wish-container" id="wishContainer"></div>
+</section>
+<br>
+<br>
     <!-- SURPRISE -->
     <section id="surprise">
       <div class="section-title">
@@ -1243,6 +1350,10 @@ body.lock-scroll {
         <h2>Open Your Letter</h2>
       </div>
       <div class="envelope-wrap reveal">
+        <div class="envelope-message">
+  💌 "A secret from my heart is sealed inside... Tap to open." 💌     
+</div>
+
         <div class="envelope" id="envelope" tabindex="0" role="button">
           <div class="flap"></div>
           <div class="letter" id="letter">
@@ -1271,6 +1382,8 @@ body.lock-scroll {
 
 
 <script>
+
+  
  const quizData = [
   { answer: "Sept 05" }, 
   { answer: "Sept 13" },
@@ -1316,6 +1429,34 @@ document.querySelectorAll('.quiz-question').forEach((question, index) => {
 });
 
 </script>
+
+<script>
+const wishes = [
+  "Happy 19th Birthday my love ❤️",
+  "You make my world brighter 🌸",
+  "To more adventures with you 🌍",
+  "Forever yours 💕",
+  "Keep smiling, it’s my favorite thing 😘",
+  "Best thing that ever happened to me 💖",
+];
+
+const wishContainer = document.getElementById("wishContainer");
+
+function createWish(text) {
+  const div = document.createElement("div");
+  div.className = "wish";
+  div.textContent = text;
+  div.style.left = Math.random() * 80 + "%";
+  wishContainer.appendChild(div);
+  setTimeout(() => div.remove(), 12000);
+}
+
+setInterval(() => {
+  const wish = wishes[Math.floor(Math.random() * wishes.length)];
+  createWish(wish);
+}, 2500);
+</script>
+
   <script>
     
 
